[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/radioSignal.gd" type="Script" id=1]
[ext_resource path="res://Sounds/drums.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/sax.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/spaceCan.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 1768.82

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 3.4254

[node name="radioSignal" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
midRange = 1000
closeRange = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 3.7948, -3.7948 )
shape = SubResource( 1 )

[node name="sound1" type="AudioStreamPlayer2D" parent="." index="1"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 0.8
autoplay = false
max_distance = 2000.0
attenuation = 1.93184
bus = "Master"
area_mask = 1

[node name="sound2" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.5
autoplay = false
max_distance = 2000.0
attenuation = 5.65674
bus = "Master"
area_mask = 1

[node name="sourceSprite" type="Sprite" parent="." index="3"]

scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="sourceSprite" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="sourceSprite/Area2D" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="." to="." method="_on_soundArea_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_soundArea_body_exited"]

[connection signal="body_entered" from="sourceSprite/Area2D" to="." method="_on_Area2D_body_entered"]


